# glinits-restful

./: .env  .flaskenv  .gitignore  Dockerfile  README.md  README.rst  README_dev.md  app.py  app_deprecated.py  docker-compose.yml  pyproject.toml  uwsgi.ini
buying_frenzy/: README.md  __init__.py  cli.py  default_settings.py  entity.py  errors.py  factory.py  model.py  models.py  service.py  settings.py  utility.py  view.py
buying_frenzy/api/: __init__.py  errors.py
buying_frenzy/api/v1/: __init__.py  hello.py  restaurant.py
buying_frenzy/endpoints/: __init__.py
buying_frenzy/endpoints/v1/: __init__.py  hello.py  restaurant.py  restaurant_deprecated.py
data/: README.md  glinits.json  glinits_v2.json
doc/: README.md  README_dev.md
flaskr/: README.md  __init__.py  db.py
nginx/: default.conf
tests/: _test_view.py  conftest.py  test_default_settings.py  test_glints_restful.py
tests/data/: restaurant_with_menu.json  users_with_purchase_history.json
tests/functional/: test_buying_frenzy.py
tests/unit/: test_settings.py
