[tool.poetry]
name = "glints-restful"
version = "0.1.0"
description = ""
authors = ["Lance Chang <virtuouslycan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.1"
SQLAlchemy-Utils = "^0.37.8"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
